--- a/src/navbar/recipes.css
+++ b/src/navbar/recipes.css
@@ -84,10 +84,7 @@ span.recipes-tag {
     font-size: 20px;
     color: darkblue;
   }
-  
-  .quality p {
-    font-size: 12px;
-}*/
+  */
   
   /* carousel page  */
   .abc img {
