--- a/src/navbar/recipes.css
+++ b/src/navbar/recipes.css
@@ -10,7 +10,9 @@
     text-align: center;
     font-size: 20px;
     font-family: cursive;
-    
+  *{
+    font-family: cursive;
+  }  
   }
   .all-rec {
     padding: 50px 0;
